--- a/obsidian_zettel/Base/Что такое Сокет.md
+++ b/obsidian_zettel/Base/Что такое Сокет.md
@@ -6,7 +6,7 @@ ___
 - **Сокет** - это абстракция операционной системы, представляющая собой интерфейс обмена данными между процессами
 
 ## Зачем?
-- Т.к. процесс ввода и вывода 
+- Т.к. процесс ввода и вывода организовнный через простой файл, не очень подходить для межпроцессорного взаимодействия, поэтому был введен сокет специальный файл, для этого
 
 ## Как?
 - 
@@ -16,7 +16,7 @@ ___
 - [ ] 
 ___
 ### Zero-Links
-- 
+- [[00 Сокет]]
 
 ___
 ### Links
